edit-avatar-mobile was hidden by default

--- a/app/pug/partials/edit-avatar-modal.pug
+++ b/app/pug/partials/edit-avatar-modal.pug
@@ -2,7 +2,7 @@ include /partials/edit-avatar-tool
 
 mixin edit-avatar-modal(props = {})
 
-  .modal.edit-avatar-modal.js-edit-avatar-modal(data-modal="edit-avatar-modal" data-modal-auto)
+  .modal.edit-avatar-modal.js-edit-avatar-modal(data-modal="edit-avatar-modal")
     .modal__close(data-modal-close="edit-avatar-modal")
       +close({color:'alto', size:'20'})
     .edit-avatar-modal__body
