--- a/app/sass/components/settings-services.sass
+++ b/app/sass/components/settings-services.sass
@@ -3,6 +3,6 @@
   &__footer
     padding: 20px
     &-text
-      font-size: rem(18px)
-      line-height: rem(30px)
+      font-size: rem(16px)
+      line-height: 1.5
       font-weight: 600
