--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -45,6 +45,7 @@
 @import ./components/select
 @import ./components/dropdown
 @import ./components/burger
+@import ./components/table-holder
 @import ./components/table
 @import ./components/tabs
 @import ./components/skill
