--- a/app/sass/components/icon-title.sass
+++ b/app/sass/components/icon-title.sass
@@ -2,5 +2,8 @@
   display: flex
   align-items: center
   &__icon
-    max-width: 21px
+    width: 20px
     margin-right: 10px
+  &__title
+    flex: 1
+    word-break: break-word
