--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1046,8 +1046,15 @@ p,
 }
 
 .icon-title__icon {
-  max-width: 21px;
+  width: 20px;
   margin-right: 10px;
+}
+
+.icon-title__title {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  word-break: break-word;
 }
 
 .avatar {
@@ -2299,6 +2306,11 @@ p,
   transform: rotate(-45deg);
 }
 
+.table-holder {
+  width: 100%;
+  overflow-x: auto;
+}
+
 .table {
   width: 100%;
   border-collapse: collapse;
@@ -2310,7 +2322,8 @@ p,
 
 .table td,
 .table th {
-  padding: 15px;
+  white-space: nowrap;
+  padding: 10px 15px;
   vertical-align: middle;
 }
 
@@ -3039,6 +3052,7 @@ p,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow-x: auto;
 }
 
 .catalog__tab {
@@ -3066,9 +3080,11 @@ p,
   font-weight: 600;
   line-height: 1;
   color: #9D9D9D;
+  white-space: nowrap;
 }
 
 .catalog__content {
+  width: 100%;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
@@ -3234,8 +3250,8 @@ p,
 }
 
 .settings-services__footer-text {
-  font-size: 1.28571rem;
-  line-height: 2.14286rem;
+  font-size: 1.14286rem;
+  line-height: 1.5;
   font-weight: 600;
 }
 
@@ -4989,6 +5005,15 @@ p,
 
   .button-group__button:not(:last-child) {
     margin-right: 15px;
+  }
+
+  .table td:first-child,
+  .table th:first-child {
+    padding-left: 15px;
+  }
+
+  .table td * {
+    font-size: 0.85714rem !important;
   }
 
   .application-form__card {
