--- a/app/pug/partials/skill-checkbox.pug
+++ b/app/pug/partials/skill-checkbox.pug
@@ -4,7 +4,7 @@ mixin skill-checkbox(props = {})
   -const { title, checked } = props
 
   label.skill-checkbox
-    +input({stadard:false, classes:'skill-checkbox__input'})(type="checkbox" name="tag-checkbox" id="tag-checkbox1" checked=checked)
+    +input({standard:false, classes:'skill-checkbox__input'})(type="checkbox" name="tag-checkbox" id="tag-checkbox1" checked=checked)
     .skill-checkbox__wrap
       .skill-checkbox__wrap-title #{title}
       .skill-checkbox__wrap-icon
