--- a/app/pug/partials/input.pug
+++ b/app/pug/partials/input.pug
@@ -1,8 +1,8 @@
 mixin input(props = {})
-  -const { classes, bordered, size, stadard, hidden } = props
+  -const { classes, bordered, size, standard, hidden } = props
   -
     const classnames = classNames({
-      'input': stadard !== false,
+      'input': standard !== false,
       'input--bordered': bordered,
       'input--hidden': hidden,
       [`input--${size}`]: size,
