dropdown position change function was added

--- a/app/pug/pages/settings-page/education.pug
+++ b/app/pug/pages/settings-page/education.pug
@@ -59,7 +59,7 @@ include /partials/skill
           .row-group__item
             h5 Skills:
           .row-group__item
-            +skills-dropdown
+            +skills-dropdown()
       .column-group
         .column-group__item
           +skill({title:'Adobe Acrobat Pro'})
@@ -74,7 +74,7 @@ include /partials/skill
           .row-group__item
             h5 Expertise:
           .row-group__item
-            +skills-dropdown
+            +skills-dropdown()
       .column-group
         .column-group__item
           +skill({title:'Technical'})
