margins were changed to px. Input animation was fixed

--- a/app/pug/pages/application-page/step-1/card-3.pug
+++ b/app/pug/pages/application-page/step-1/card-3.pug
@@ -29,11 +29,11 @@
       .form-group
         .form-group__header
           p What languages do you proofread?
-        .column-group.column-group--sm
+        .column-group.column-group--md
           +times(2)
             .column-group__item
               .row
-                .col-12.col-md-4.mb-3.mb-md-0
+                .col-12.col-md-4.mb-10.mb-md-0
                   +translation-select()
                 .col-12.col-md-8
                   .input-group
