--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -189,115 +189,115 @@ svg {
 }
 
 .mt-0 {
-  margin-top: 0rem;
+  margin-top: 0px;
 }
 
 .mr-0 {
-  margin-right: 0rem;
+  margin-right: 0px;
 }
 
 .mb-0 {
-  margin-bottom: 0rem;
+  margin-bottom: 0px;
 }
 
 .ml-0 {
-  margin-left: 0rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.ml-3 {
-  margin-left: 0.75rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
+  margin-left: 0px;
 }
 
 .mt-5 {
-  margin-top: 1.25rem;
+  margin-top: 5px;
 }
 
 .mr-5 {
-  margin-right: 1.25rem;
+  margin-right: 5px;
 }
 
 .mb-5 {
-  margin-bottom: 1.25rem;
+  margin-bottom: 5px;
 }
 
 .ml-5 {
-  margin-left: 1.25rem;
+  margin-left: 5px;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mt-10 {
+  margin-top: 10px;
 }
 
-.mr-6 {
-  margin-right: 1.5rem;
+.mr-10 {
+  margin-right: 10px;
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem;
+.mb-10 {
+  margin-bottom: 10px;
 }
 
-.ml-6 {
-  margin-left: 1.5rem;
+.ml-10 {
+  margin-left: 10px;
+}
+
+.mt-15 {
+  margin-top: 15px;
+}
+
+.mr-15 {
+  margin-right: 15px;
+}
+
+.mb-15 {
+  margin-bottom: 15px;
+}
+
+.ml-15 {
+  margin-left: 15px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mr-20 {
+  margin-right: 20px;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.ml-20 {
+  margin-left: 20px;
+}
+
+.mt-25 {
+  margin-top: 25px;
+}
+
+.mr-25 {
+  margin-right: 25px;
+}
+
+.mb-25 {
+  margin-bottom: 25px;
+}
+
+.ml-25 {
+  margin-left: 25px;
+}
+
+.mt-30 {
+  margin-top: 30px;
+}
+
+.mr-30 {
+  margin-right: 30px;
+}
+
+.mb-30 {
+  margin-bottom: 30px;
+}
+
+.ml-30 {
+  margin-left: 30px;
 }
 
 @font-face {
@@ -1182,7 +1182,7 @@ p,
 }
 
 .form-group__header {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .form-divider {
@@ -3669,115 +3669,115 @@ p,
   }
 
   .mt-xs-0 {
-    margin-top: 0rem;
+    margin-top: 0px;
   }
 
   .mr-xs-0 {
-    margin-right: 0rem;
+    margin-right: 0px;
   }
 
   .mb-xs-0 {
-    margin-bottom: 0rem;
+    margin-bottom: 0px;
   }
 
   .ml-xs-0 {
-    margin-left: 0rem;
-  }
-
-  .mt-xs-1 {
-    margin-top: 0.25rem;
-  }
-
-  .mr-xs-1 {
-    margin-right: 0.25rem;
-  }
-
-  .mb-xs-1 {
-    margin-bottom: 0.25rem;
-  }
-
-  .ml-xs-1 {
-    margin-left: 0.25rem;
-  }
-
-  .mt-xs-2 {
-    margin-top: 0.5rem;
-  }
-
-  .mr-xs-2 {
-    margin-right: 0.5rem;
-  }
-
-  .mb-xs-2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .ml-xs-2 {
-    margin-left: 0.5rem;
-  }
-
-  .mt-xs-3 {
-    margin-top: 0.75rem;
-  }
-
-  .mr-xs-3 {
-    margin-right: 0.75rem;
-  }
-
-  .mb-xs-3 {
-    margin-bottom: 0.75rem;
-  }
-
-  .ml-xs-3 {
-    margin-left: 0.75rem;
-  }
-
-  .mt-xs-4 {
-    margin-top: 1rem;
-  }
-
-  .mr-xs-4 {
-    margin-right: 1rem;
-  }
-
-  .mb-xs-4 {
-    margin-bottom: 1rem;
-  }
-
-  .ml-xs-4 {
-    margin-left: 1rem;
+    margin-left: 0px;
   }
 
   .mt-xs-5 {
-    margin-top: 1.25rem;
+    margin-top: 5px;
   }
 
   .mr-xs-5 {
-    margin-right: 1.25rem;
+    margin-right: 5px;
   }
 
   .mb-xs-5 {
-    margin-bottom: 1.25rem;
+    margin-bottom: 5px;
   }
 
   .ml-xs-5 {
-    margin-left: 1.25rem;
+    margin-left: 5px;
   }
 
-  .mt-xs-6 {
-    margin-top: 1.5rem;
+  .mt-xs-10 {
+    margin-top: 10px;
   }
 
-  .mr-xs-6 {
-    margin-right: 1.5rem;
+  .mr-xs-10 {
+    margin-right: 10px;
   }
 
-  .mb-xs-6 {
-    margin-bottom: 1.5rem;
+  .mb-xs-10 {
+    margin-bottom: 10px;
   }
 
-  .ml-xs-6 {
-    margin-left: 1.5rem;
+  .ml-xs-10 {
+    margin-left: 10px;
+  }
+
+  .mt-xs-15 {
+    margin-top: 15px;
+  }
+
+  .mr-xs-15 {
+    margin-right: 15px;
+  }
+
+  .mb-xs-15 {
+    margin-bottom: 15px;
+  }
+
+  .ml-xs-15 {
+    margin-left: 15px;
+  }
+
+  .mt-xs-20 {
+    margin-top: 20px;
+  }
+
+  .mr-xs-20 {
+    margin-right: 20px;
+  }
+
+  .mb-xs-20 {
+    margin-bottom: 20px;
+  }
+
+  .ml-xs-20 {
+    margin-left: 20px;
+  }
+
+  .mt-xs-25 {
+    margin-top: 25px;
+  }
+
+  .mr-xs-25 {
+    margin-right: 25px;
+  }
+
+  .mb-xs-25 {
+    margin-bottom: 25px;
+  }
+
+  .ml-xs-25 {
+    margin-left: 25px;
+  }
+
+  .mt-xs-30 {
+    margin-top: 30px;
+  }
+
+  .mr-xs-30 {
+    margin-right: 30px;
+  }
+
+  .mb-xs-30 {
+    margin-bottom: 30px;
+  }
+
+  .ml-xs-30 {
+    margin-left: 30px;
   }
 }
 
@@ -3845,115 +3845,115 @@ p,
   }
 
   .mt-sm-0 {
-    margin-top: 0rem;
+    margin-top: 0px;
   }
 
   .mr-sm-0 {
-    margin-right: 0rem;
+    margin-right: 0px;
   }
 
   .mb-sm-0 {
-    margin-bottom: 0rem;
+    margin-bottom: 0px;
   }
 
   .ml-sm-0 {
-    margin-left: 0rem;
-  }
-
-  .mt-sm-1 {
-    margin-top: 0.25rem;
-  }
-
-  .mr-sm-1 {
-    margin-right: 0.25rem;
-  }
-
-  .mb-sm-1 {
-    margin-bottom: 0.25rem;
-  }
-
-  .ml-sm-1 {
-    margin-left: 0.25rem;
-  }
-
-  .mt-sm-2 {
-    margin-top: 0.5rem;
-  }
-
-  .mr-sm-2 {
-    margin-right: 0.5rem;
-  }
-
-  .mb-sm-2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .ml-sm-2 {
-    margin-left: 0.5rem;
-  }
-
-  .mt-sm-3 {
-    margin-top: 0.75rem;
-  }
-
-  .mr-sm-3 {
-    margin-right: 0.75rem;
-  }
-
-  .mb-sm-3 {
-    margin-bottom: 0.75rem;
-  }
-
-  .ml-sm-3 {
-    margin-left: 0.75rem;
-  }
-
-  .mt-sm-4 {
-    margin-top: 1rem;
-  }
-
-  .mr-sm-4 {
-    margin-right: 1rem;
-  }
-
-  .mb-sm-4 {
-    margin-bottom: 1rem;
-  }
-
-  .ml-sm-4 {
-    margin-left: 1rem;
+    margin-left: 0px;
   }
 
   .mt-sm-5 {
-    margin-top: 1.25rem;
+    margin-top: 5px;
   }
 
   .mr-sm-5 {
-    margin-right: 1.25rem;
+    margin-right: 5px;
   }
 
   .mb-sm-5 {
-    margin-bottom: 1.25rem;
+    margin-bottom: 5px;
   }
 
   .ml-sm-5 {
-    margin-left: 1.25rem;
+    margin-left: 5px;
   }
 
-  .mt-sm-6 {
-    margin-top: 1.5rem;
+  .mt-sm-10 {
+    margin-top: 10px;
   }
 
-  .mr-sm-6 {
-    margin-right: 1.5rem;
+  .mr-sm-10 {
+    margin-right: 10px;
   }
 
-  .mb-sm-6 {
-    margin-bottom: 1.5rem;
+  .mb-sm-10 {
+    margin-bottom: 10px;
   }
 
-  .ml-sm-6 {
-    margin-left: 1.5rem;
+  .ml-sm-10 {
+    margin-left: 10px;
+  }
+
+  .mt-sm-15 {
+    margin-top: 15px;
+  }
+
+  .mr-sm-15 {
+    margin-right: 15px;
+  }
+
+  .mb-sm-15 {
+    margin-bottom: 15px;
+  }
+
+  .ml-sm-15 {
+    margin-left: 15px;
+  }
+
+  .mt-sm-20 {
+    margin-top: 20px;
+  }
+
+  .mr-sm-20 {
+    margin-right: 20px;
+  }
+
+  .mb-sm-20 {
+    margin-bottom: 20px;
+  }
+
+  .ml-sm-20 {
+    margin-left: 20px;
+  }
+
+  .mt-sm-25 {
+    margin-top: 25px;
+  }
+
+  .mr-sm-25 {
+    margin-right: 25px;
+  }
+
+  .mb-sm-25 {
+    margin-bottom: 25px;
+  }
+
+  .ml-sm-25 {
+    margin-left: 25px;
+  }
+
+  .mt-sm-30 {
+    margin-top: 30px;
+  }
+
+  .mr-sm-30 {
+    margin-right: 30px;
+  }
+
+  .mb-sm-30 {
+    margin-bottom: 30px;
+  }
+
+  .ml-sm-30 {
+    margin-left: 30px;
   }
 }
 
@@ -4021,115 +4021,115 @@ p,
   }
 
   .mt-md-0 {
-    margin-top: 0rem;
+    margin-top: 0px;
   }
 
   .mr-md-0 {
-    margin-right: 0rem;
+    margin-right: 0px;
   }
 
   .mb-md-0 {
-    margin-bottom: 0rem;
+    margin-bottom: 0px;
   }
 
   .ml-md-0 {
-    margin-left: 0rem;
-  }
-
-  .mt-md-1 {
-    margin-top: 0.25rem;
-  }
-
-  .mr-md-1 {
-    margin-right: 0.25rem;
-  }
-
-  .mb-md-1 {
-    margin-bottom: 0.25rem;
-  }
-
-  .ml-md-1 {
-    margin-left: 0.25rem;
-  }
-
-  .mt-md-2 {
-    margin-top: 0.5rem;
-  }
-
-  .mr-md-2 {
-    margin-right: 0.5rem;
-  }
-
-  .mb-md-2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .ml-md-2 {
-    margin-left: 0.5rem;
-  }
-
-  .mt-md-3 {
-    margin-top: 0.75rem;
-  }
-
-  .mr-md-3 {
-    margin-right: 0.75rem;
-  }
-
-  .mb-md-3 {
-    margin-bottom: 0.75rem;
-  }
-
-  .ml-md-3 {
-    margin-left: 0.75rem;
-  }
-
-  .mt-md-4 {
-    margin-top: 1rem;
-  }
-
-  .mr-md-4 {
-    margin-right: 1rem;
-  }
-
-  .mb-md-4 {
-    margin-bottom: 1rem;
-  }
-
-  .ml-md-4 {
-    margin-left: 1rem;
+    margin-left: 0px;
   }
 
   .mt-md-5 {
-    margin-top: 1.25rem;
+    margin-top: 5px;
   }
 
   .mr-md-5 {
-    margin-right: 1.25rem;
+    margin-right: 5px;
   }
 
   .mb-md-5 {
-    margin-bottom: 1.25rem;
+    margin-bottom: 5px;
   }
 
   .ml-md-5 {
-    margin-left: 1.25rem;
+    margin-left: 5px;
   }
 
-  .mt-md-6 {
-    margin-top: 1.5rem;
+  .mt-md-10 {
+    margin-top: 10px;
   }
 
-  .mr-md-6 {
-    margin-right: 1.5rem;
+  .mr-md-10 {
+    margin-right: 10px;
   }
 
-  .mb-md-6 {
-    margin-bottom: 1.5rem;
+  .mb-md-10 {
+    margin-bottom: 10px;
   }
 
-  .ml-md-6 {
-    margin-left: 1.5rem;
+  .ml-md-10 {
+    margin-left: 10px;
+  }
+
+  .mt-md-15 {
+    margin-top: 15px;
+  }
+
+  .mr-md-15 {
+    margin-right: 15px;
+  }
+
+  .mb-md-15 {
+    margin-bottom: 15px;
+  }
+
+  .ml-md-15 {
+    margin-left: 15px;
+  }
+
+  .mt-md-20 {
+    margin-top: 20px;
+  }
+
+  .mr-md-20 {
+    margin-right: 20px;
+  }
+
+  .mb-md-20 {
+    margin-bottom: 20px;
+  }
+
+  .ml-md-20 {
+    margin-left: 20px;
+  }
+
+  .mt-md-25 {
+    margin-top: 25px;
+  }
+
+  .mr-md-25 {
+    margin-right: 25px;
+  }
+
+  .mb-md-25 {
+    margin-bottom: 25px;
+  }
+
+  .ml-md-25 {
+    margin-left: 25px;
+  }
+
+  .mt-md-30 {
+    margin-top: 30px;
+  }
+
+  .mr-md-30 {
+    margin-right: 30px;
+  }
+
+  .mb-md-30 {
+    margin-bottom: 30px;
+  }
+
+  .ml-md-30 {
+    margin-left: 30px;
   }
 }
 
@@ -4197,115 +4197,115 @@ p,
   }
 
   .mt-lg-0 {
-    margin-top: 0rem;
+    margin-top: 0px;
   }
 
   .mr-lg-0 {
-    margin-right: 0rem;
+    margin-right: 0px;
   }
 
   .mb-lg-0 {
-    margin-bottom: 0rem;
+    margin-bottom: 0px;
   }
 
   .ml-lg-0 {
-    margin-left: 0rem;
-  }
-
-  .mt-lg-1 {
-    margin-top: 0.25rem;
-  }
-
-  .mr-lg-1 {
-    margin-right: 0.25rem;
-  }
-
-  .mb-lg-1 {
-    margin-bottom: 0.25rem;
-  }
-
-  .ml-lg-1 {
-    margin-left: 0.25rem;
-  }
-
-  .mt-lg-2 {
-    margin-top: 0.5rem;
-  }
-
-  .mr-lg-2 {
-    margin-right: 0.5rem;
-  }
-
-  .mb-lg-2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .ml-lg-2 {
-    margin-left: 0.5rem;
-  }
-
-  .mt-lg-3 {
-    margin-top: 0.75rem;
-  }
-
-  .mr-lg-3 {
-    margin-right: 0.75rem;
-  }
-
-  .mb-lg-3 {
-    margin-bottom: 0.75rem;
-  }
-
-  .ml-lg-3 {
-    margin-left: 0.75rem;
-  }
-
-  .mt-lg-4 {
-    margin-top: 1rem;
-  }
-
-  .mr-lg-4 {
-    margin-right: 1rem;
-  }
-
-  .mb-lg-4 {
-    margin-bottom: 1rem;
-  }
-
-  .ml-lg-4 {
-    margin-left: 1rem;
+    margin-left: 0px;
   }
 
   .mt-lg-5 {
-    margin-top: 1.25rem;
+    margin-top: 5px;
   }
 
   .mr-lg-5 {
-    margin-right: 1.25rem;
+    margin-right: 5px;
   }
 
   .mb-lg-5 {
-    margin-bottom: 1.25rem;
+    margin-bottom: 5px;
   }
 
   .ml-lg-5 {
-    margin-left: 1.25rem;
+    margin-left: 5px;
   }
 
-  .mt-lg-6 {
-    margin-top: 1.5rem;
+  .mt-lg-10 {
+    margin-top: 10px;
   }
 
-  .mr-lg-6 {
-    margin-right: 1.5rem;
+  .mr-lg-10 {
+    margin-right: 10px;
   }
 
-  .mb-lg-6 {
-    margin-bottom: 1.5rem;
+  .mb-lg-10 {
+    margin-bottom: 10px;
   }
 
-  .ml-lg-6 {
-    margin-left: 1.5rem;
+  .ml-lg-10 {
+    margin-left: 10px;
+  }
+
+  .mt-lg-15 {
+    margin-top: 15px;
+  }
+
+  .mr-lg-15 {
+    margin-right: 15px;
+  }
+
+  .mb-lg-15 {
+    margin-bottom: 15px;
+  }
+
+  .ml-lg-15 {
+    margin-left: 15px;
+  }
+
+  .mt-lg-20 {
+    margin-top: 20px;
+  }
+
+  .mr-lg-20 {
+    margin-right: 20px;
+  }
+
+  .mb-lg-20 {
+    margin-bottom: 20px;
+  }
+
+  .ml-lg-20 {
+    margin-left: 20px;
+  }
+
+  .mt-lg-25 {
+    margin-top: 25px;
+  }
+
+  .mr-lg-25 {
+    margin-right: 25px;
+  }
+
+  .mb-lg-25 {
+    margin-bottom: 25px;
+  }
+
+  .ml-lg-25 {
+    margin-left: 25px;
+  }
+
+  .mt-lg-30 {
+    margin-top: 30px;
+  }
+
+  .mr-lg-30 {
+    margin-right: 30px;
+  }
+
+  .mb-lg-30 {
+    margin-bottom: 30px;
+  }
+
+  .ml-lg-30 {
+    margin-left: 30px;
   }
 }
 
@@ -4373,115 +4373,115 @@ p,
   }
 
   .mt-xl-0 {
-    margin-top: 0rem;
+    margin-top: 0px;
   }
 
   .mr-xl-0 {
-    margin-right: 0rem;
+    margin-right: 0px;
   }
 
   .mb-xl-0 {
-    margin-bottom: 0rem;
+    margin-bottom: 0px;
   }
 
   .ml-xl-0 {
-    margin-left: 0rem;
-  }
-
-  .mt-xl-1 {
-    margin-top: 0.25rem;
-  }
-
-  .mr-xl-1 {
-    margin-right: 0.25rem;
-  }
-
-  .mb-xl-1 {
-    margin-bottom: 0.25rem;
-  }
-
-  .ml-xl-1 {
-    margin-left: 0.25rem;
-  }
-
-  .mt-xl-2 {
-    margin-top: 0.5rem;
-  }
-
-  .mr-xl-2 {
-    margin-right: 0.5rem;
-  }
-
-  .mb-xl-2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .ml-xl-2 {
-    margin-left: 0.5rem;
-  }
-
-  .mt-xl-3 {
-    margin-top: 0.75rem;
-  }
-
-  .mr-xl-3 {
-    margin-right: 0.75rem;
-  }
-
-  .mb-xl-3 {
-    margin-bottom: 0.75rem;
-  }
-
-  .ml-xl-3 {
-    margin-left: 0.75rem;
-  }
-
-  .mt-xl-4 {
-    margin-top: 1rem;
-  }
-
-  .mr-xl-4 {
-    margin-right: 1rem;
-  }
-
-  .mb-xl-4 {
-    margin-bottom: 1rem;
-  }
-
-  .ml-xl-4 {
-    margin-left: 1rem;
+    margin-left: 0px;
   }
 
   .mt-xl-5 {
-    margin-top: 1.25rem;
+    margin-top: 5px;
   }
 
   .mr-xl-5 {
-    margin-right: 1.25rem;
+    margin-right: 5px;
   }
 
   .mb-xl-5 {
-    margin-bottom: 1.25rem;
+    margin-bottom: 5px;
   }
 
   .ml-xl-5 {
-    margin-left: 1.25rem;
+    margin-left: 5px;
   }
 
-  .mt-xl-6 {
-    margin-top: 1.5rem;
+  .mt-xl-10 {
+    margin-top: 10px;
   }
 
-  .mr-xl-6 {
-    margin-right: 1.5rem;
+  .mr-xl-10 {
+    margin-right: 10px;
   }
 
-  .mb-xl-6 {
-    margin-bottom: 1.5rem;
+  .mb-xl-10 {
+    margin-bottom: 10px;
   }
 
-  .ml-xl-6 {
-    margin-left: 1.5rem;
+  .ml-xl-10 {
+    margin-left: 10px;
+  }
+
+  .mt-xl-15 {
+    margin-top: 15px;
+  }
+
+  .mr-xl-15 {
+    margin-right: 15px;
+  }
+
+  .mb-xl-15 {
+    margin-bottom: 15px;
+  }
+
+  .ml-xl-15 {
+    margin-left: 15px;
+  }
+
+  .mt-xl-20 {
+    margin-top: 20px;
+  }
+
+  .mr-xl-20 {
+    margin-right: 20px;
+  }
+
+  .mb-xl-20 {
+    margin-bottom: 20px;
+  }
+
+  .ml-xl-20 {
+    margin-left: 20px;
+  }
+
+  .mt-xl-25 {
+    margin-top: 25px;
+  }
+
+  .mr-xl-25 {
+    margin-right: 25px;
+  }
+
+  .mb-xl-25 {
+    margin-bottom: 25px;
+  }
+
+  .ml-xl-25 {
+    margin-left: 25px;
+  }
+
+  .mt-xl-30 {
+    margin-top: 30px;
+  }
+
+  .mr-xl-30 {
+    margin-right: 30px;
+  }
+
+  .mb-xl-30 {
+    margin-bottom: 30px;
+  }
+
+  .ml-xl-30 {
+    margin-left: 30px;
   }
 }
 
@@ -4549,115 +4549,115 @@ p,
   }
 
   .mt-xxl-0 {
-    margin-top: 0rem;
+    margin-top: 0px;
   }
 
   .mr-xxl-0 {
-    margin-right: 0rem;
+    margin-right: 0px;
   }
 
   .mb-xxl-0 {
-    margin-bottom: 0rem;
+    margin-bottom: 0px;
   }
 
   .ml-xxl-0 {
-    margin-left: 0rem;
-  }
-
-  .mt-xxl-1 {
-    margin-top: 0.25rem;
-  }
-
-  .mr-xxl-1 {
-    margin-right: 0.25rem;
-  }
-
-  .mb-xxl-1 {
-    margin-bottom: 0.25rem;
-  }
-
-  .ml-xxl-1 {
-    margin-left: 0.25rem;
-  }
-
-  .mt-xxl-2 {
-    margin-top: 0.5rem;
-  }
-
-  .mr-xxl-2 {
-    margin-right: 0.5rem;
-  }
-
-  .mb-xxl-2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .ml-xxl-2 {
-    margin-left: 0.5rem;
-  }
-
-  .mt-xxl-3 {
-    margin-top: 0.75rem;
-  }
-
-  .mr-xxl-3 {
-    margin-right: 0.75rem;
-  }
-
-  .mb-xxl-3 {
-    margin-bottom: 0.75rem;
-  }
-
-  .ml-xxl-3 {
-    margin-left: 0.75rem;
-  }
-
-  .mt-xxl-4 {
-    margin-top: 1rem;
-  }
-
-  .mr-xxl-4 {
-    margin-right: 1rem;
-  }
-
-  .mb-xxl-4 {
-    margin-bottom: 1rem;
-  }
-
-  .ml-xxl-4 {
-    margin-left: 1rem;
+    margin-left: 0px;
   }
 
   .mt-xxl-5 {
-    margin-top: 1.25rem;
+    margin-top: 5px;
   }
 
   .mr-xxl-5 {
-    margin-right: 1.25rem;
+    margin-right: 5px;
   }
 
   .mb-xxl-5 {
-    margin-bottom: 1.25rem;
+    margin-bottom: 5px;
   }
 
   .ml-xxl-5 {
-    margin-left: 1.25rem;
+    margin-left: 5px;
   }
 
-  .mt-xxl-6 {
-    margin-top: 1.5rem;
+  .mt-xxl-10 {
+    margin-top: 10px;
   }
 
-  .mr-xxl-6 {
-    margin-right: 1.5rem;
+  .mr-xxl-10 {
+    margin-right: 10px;
   }
 
-  .mb-xxl-6 {
-    margin-bottom: 1.5rem;
+  .mb-xxl-10 {
+    margin-bottom: 10px;
   }
 
-  .ml-xxl-6 {
-    margin-left: 1.5rem;
+  .ml-xxl-10 {
+    margin-left: 10px;
+  }
+
+  .mt-xxl-15 {
+    margin-top: 15px;
+  }
+
+  .mr-xxl-15 {
+    margin-right: 15px;
+  }
+
+  .mb-xxl-15 {
+    margin-bottom: 15px;
+  }
+
+  .ml-xxl-15 {
+    margin-left: 15px;
+  }
+
+  .mt-xxl-20 {
+    margin-top: 20px;
+  }
+
+  .mr-xxl-20 {
+    margin-right: 20px;
+  }
+
+  .mb-xxl-20 {
+    margin-bottom: 20px;
+  }
+
+  .ml-xxl-20 {
+    margin-left: 20px;
+  }
+
+  .mt-xxl-25 {
+    margin-top: 25px;
+  }
+
+  .mr-xxl-25 {
+    margin-right: 25px;
+  }
+
+  .mb-xxl-25 {
+    margin-bottom: 25px;
+  }
+
+  .ml-xxl-25 {
+    margin-left: 25px;
+  }
+
+  .mt-xxl-30 {
+    margin-top: 30px;
+  }
+
+  .mr-xxl-30 {
+    margin-right: 30px;
+  }
+
+  .mb-xxl-30 {
+    margin-bottom: 30px;
+  }
+
+  .ml-xxl-30 {
+    margin-left: 30px;
   }
 }
 
