settings page tabs were rewrited with using the grid

--- a/app/pug/pages/settings-page/education.pug
+++ b/app/pug/pages/settings-page/education.pug
@@ -1,6 +1,5 @@
 include /partials/avatar
 include /partials/button
-include /partials/inline-button
 include /partials/upload-documents
 include /partials/link
 include /partials/skills-dropdown
@@ -18,14 +17,12 @@ include /partials/skill
     {left:'Diploma category:', right:'Translation & Interpreting'},
   ]
 
-.settings-education
-  .settings-education__row
-    //- Column
-    .settings-education__col
-      .settings-education__heading
-        .row-group.row-group--align-center
-          h5 Education:
-      .settings-education__line
+.row
+  .col-12.col-md-6.col-xl-4.offset-0.offset-xxl-1.mb-40
+    .column-heading
+      h5 Education:
+    .column-group
+      .column-group__item
         .info-list
           each item in list1
             .info-list__item
@@ -33,7 +30,7 @@ include /partials/skill
                 p(class=`p-sm font-semibold ${item.leftAccent ? 'text-surfie-green' : 'text-silver-chalice'}`) #{item.left}
               .info-list__right
                 p.p-sm.font-semibold #{item.right}
-      .settings-education__line
+      .column-group__item
         .info-list
           .info-list__items
             each item in list2
@@ -42,47 +39,47 @@ include /partials/skill
                   p(class=`p-sm font-semibold ${item.leftAccent ? 'text-surfie-green' : 'text-silver-chalice'}`) #{item.left}
                 .info-list__right
                   p.p-sm.font-semibold #{item.right}
-    //- Column
-    .settings-education__col
-      .settings-education__heading
-        h5 Tax information:
-      .info-list
-        .info-list__item
-          .info-list__left
-            p.p-sm.font-semibold.text-silver-chalice Issuing invoice:
-          .info-list__right
-            p.p-sm.font-semibold.text-surfie-green IVP
-    //- Column
-    .settings-education__col
-      .settings-education__heading.settings-education__heading--alt
-        .row-group.row-group--align-center
-          .row-group__item
-            h5 Skills:
-          .row-group__item
-            +skills-dropdown()
-      .column-group
-        .column-group__item
-          +skill({title:'Adobe Acrobat Pro'})
-        .column-group__item
-          +skill({title:'Illustrator'})
-        .column-group__item
-          +skill({title:'Trados'})
-    //- Column
-    .settings-education__col
-      .settings-education__heading.settings-education__heading--alt
-        .row-group.row-group--align-center
-          .row-group__item
-            h5 Expertise:
-          .row-group__item
-            +skills-dropdown()
-      .column-group
-        .column-group__item
-          +skill({title:'Technical'})
-        .column-group__item
-          +skill({title:'Legal'})
-        .column-group__item
-          +skill({title:'Medical'})
+  //- Column
+  .col-12.col-md-6.col-xl-2.mb-40
+    .column-heading
+      h5 Tax information:
+    .info-list
+      .info-list__item
+        .info-list__left
+          p.p-sm.font-semibold.text-silver-chalice Issuing invoice:
+        .info-list__right
+          p.p-sm.font-semibold.text-surfie-green IVP
+  //- Column
+  .col-12.col-md-6.col-xl-3.col-xxl-2.mb-40
+    .column-heading
+      .row-group.row-group--align-center
+        .row-group__item
+          h5 Skills:
+        .row-group__item
+          +skills-dropdown()
+    .column-group
+      .column-group__item
+        +skill({title:'Adobe Acrobat Pro'})
+      .column-group__item
+        +skill({title:'Illustrator'})
+      .column-group__item
+        +skill({title:'Trados'})
+  //- Column
+  .col-12.col-md-6.col-xl-3.col-xxl-2.mb-40
+    .column-heading
+      .row-group.row-group--align-center
+        .row-group__item
+          h5 Expertise:
+        .row-group__item
+          +skills-dropdown()
+    .column-group
+      .column-group__item
+        +skill({title:'Technical'})
+      .column-group__item
+        +skill({title:'Legal'})
+      .column-group__item
+        +skill({title:'Medical'})
 
-    //- Upload
-    .settings-education__upload
-      +upload-documents()
+  //- Upload
+  .col-12.col-xl-6.offset-0.offset-xxl-1
+    +upload-documents()
