--- a/app/pug/pages/settings-page/notifications.pug
+++ b/app/pug/pages/settings-page/notifications.pug
@@ -1,18 +1,17 @@
 include /partials/checkbox
 
-.settings-notifications
-  .settings-notifications__row
-    .settings-notifications__heading
-      h4 Send email notification to <a href="#" class="text-boston-blue">info@vertimukaraliai.lt</a> when...
-    .settings-notifications__content
-      .settings-notifications__wrap
-        .column-group.column-group--md
-          .column-group__item
-            +checkbox({ label:`A job is <span class="text-boston-blue">posted or modified</span>`, checked:true })
-          .column-group__item
-            +checkbox({ label:`A job is <span class="text-boston-blue">assigned</span>`, checked:true })
-          .column-group__item
-            +checkbox({ label:`A job is <span class="text-boston-blue">not assigned</span>`, checked:true })
-          +times(8)
-            .column-group__item
-              +checkbox({ label:`When deadline <span class="text-boston-blue">expiring soon</span>`, checked:true })
+.row
+  .col-12.col-xxl-11.offset-0.offset-xxl-1
+    .notifications-list
+      .notifications-list__heading
+        h4 Send email notification to <a href="#" class="text-boston-blue">info@vertimukaraliai.lt</a> when...
+      .notifications-list__wrap
+        .notifications-list__item
+          +checkbox({ label:`A job is <span class="text-boston-blue">posted or modified</span>`, checked:true })
+        .notifications-list__item
+          +checkbox({ label:`A job is <span class="text-boston-blue">assigned</span>`, checked:true })
+        .notifications-list__item
+          +checkbox({ label:`A job is <span class="text-boston-blue">not assigned</span>`, checked:true })
+        +times(8)
+          .notifications-list__item
+            +checkbox({ label:`When deadline <span class="text-boston-blue">expiring soon</span>`, checked:true })
