--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -41,7 +41,6 @@
 @import ./components/checkbox
 @import ./components/button-group
 @import ./components/button
-@import ./components/inline-button
 @import ./components/select
 @import ./components/dropdown
 @import ./components/burger
@@ -66,11 +65,9 @@
 @import ./components/user-dropdown-menu
 @import ./components/unread
 @import ./components/catalog
+@import ./components/column-heading
 @import ./components/info-list
-@import ./components/settings-general
-@import ./components/settings-education
-@import ./components/settings-services
-@import ./components/settings-notifications
+@import ./components/notifications-list
 @import ./components/skills-dropdown
 @import ./components/upload-documents
 @import ./components/upload-documents-box
@@ -78,3 +75,4 @@
 @import ./components/password-change-success-modal
 @import ./components/edit-avatar-modal
 @import ./components/edit-avatar-tool
+@import ./components/edit-avatar
