--- a/app/pug/pages/settings-page/general.pug
+++ b/app/pug/pages/settings-page/general.pug
@@ -1,6 +1,5 @@
 include /partials/avatar
 include /partials/button
-include /partials/inline-button
 include /partials/link
 -
   var list1 = [
@@ -26,46 +25,81 @@ include /partials/link
     {left:'Paypal:', right:'info@irina.com '},
   ]
 
-.settings-general
-  .settings-general__row
-    //- Column
-    .settings-general__avatar
-      .settings-general__avatar-wrap
-        +avatar({size:'xl', image:'images/user/avatar.jpg'})
-        .settings-general__avatar-button
-          +button({bg:'alabaster', type:'round', size:'50'})(type="button" data-modal-open="edit-avatar-modal")
-            +icon({name:'camera', fill:'surfie-green', width:'18', height:'16'})
-      .settings-general__avatar-date
+.row
+  .col-12.col-xl-3.col-xxl-2.offset-0.offset-xxl-1.mb-40.mb-xl-0
+    .column-group.column-group--sm.column-group--justify-items-center
+      .column-group__item
+        .edit-avatar
+          +avatar({size:'xl', image:'images/user/avatar.jpg'})
+          .edit-avatar__button
+            +button({bg:'alabaster', type:'round', size:'50'})(type="button" data-modal-open="edit-avatar-modal")
+              +icon({name:'camera', fill:'surfie-green', width:'18', height:'16'})
+      .column-group__item
         p.p-sm Member since: 2015-04-12
-      .settings-general__avatar-password
+      .column-group__item
         +link()(data-modal-open="password-change-modal")| Change password
-    //- Column
-    .settings-general__list
-      .settings-general__heading
-        .row-group.row-group--align-center
-          .row-group__item
-            h5 General information:
-          .row-group__item
-            +inline-button({title:'Edit', link:'#', icon:{name:'pencil', width:'12', height:'12', fill:'surfie-green'}})
-      .info-list
-        each item in list1
-          .info-list__item
-            .info-list__left
-              .font-semibold.text-silver-chalice #{item.left}
-            .info-list__right
-              p(class=`font-semibold ${item.rightAccent ? 'text-surfie-green' : ''}`) #{item.right}
-    //- Column
-    .settings-general__list
-      .settings-general__heading
-        .row-group.row-group--align-center
-          .row-group__item
-            h5 Bank information:
-          .row-group__item
-            +inline-button({title:'Edit', link:'#', icon:{name:'pencil', width:'12', height:'12', fill:'surfie-green'}})
-      .info-list
-        each item in list2
-          .info-list__item
-            .info-list__left
-              p.font-semibold.text-silver-chalice #{item.left}
-            .info-list__right
-              p(class=`font-semibold ${item.accent ? 'text-surfie-green' : ''}`) #{item.right}
+  .col-12.col-md-6.col-xl-4.mb-40.mb-md-0
+    .column-heading
+      h5 General information:
+    .info-list
+      each item in list1
+        .info-list__item
+          .info-list__left
+            .font-semibold.text-silver-chalice #{item.left}
+          .info-list__right
+            p(class=`font-semibold ${item.rightAccent ? 'text-surfie-green' : ''}`) #{item.right}
+  .col-12.col-md-6.col-xl-4
+    .column-heading
+      h5 Bank information:
+    .info-list
+      each item in list2
+        .info-list__item
+          .info-list__left
+            p.font-semibold.text-silver-chalice #{item.left}
+          .info-list__right
+            p(class=`font-semibold ${item.accent ? 'text-surfie-green' : ''}`) #{item.right}
+
+
+//- .settings-general
+//-   .settings-general__row
+//-     //- Column
+//-     .settings-general__avatar
+//-       .settings-general__avatar-wrap
+//-         +avatar({size:'xl', image:'images/user/avatar.jpg'})
+//-         .settings-general__avatar-button
+//-           +button({bg:'alabaster', type:'round', size:'50'})(type="button" data-modal-open="edit-avatar-modal")
+//-             +icon({name:'camera', fill:'surfie-green', width:'18', height:'16'})
+//-       .settings-general__avatar-date
+//-         p.p-sm Member since: 2015-04-12
+//-       .settings-general__avatar-password
+//-         +link()(data-modal-open="password-change-modal")| Change password
+//-     //- Column
+//-     .settings-general__list
+//-       .settings-general__heading
+//-         .row-group.row-group--align-center
+//-           .row-group__item
+//-             h5 General information:
+//-           .row-group__item
+//-             +inline-button({title:'Edit', link:'#', icon:{name:'pencil', width:'12', height:'12', fill:'surfie-green'}})
+//-       .info-list
+//-         each item in list1
+//-           .info-list__item
+//-             .info-list__left
+//-               .font-semibold.text-silver-chalice #{item.left}
+//-             .info-list__right
+//-               p(class=`font-semibold ${item.rightAccent ? 'text-surfie-green' : ''}`) #{item.right}
+//-     //- Column
+//-     .settings-general__list
+//-       .settings-general__heading
+//-         .row-group.row-group--align-center
+//-           .row-group__item
+//-             h5 Bank information:
+//-           .row-group__item
+//-             +inline-button({title:'Edit', link:'#', icon:{name:'pencil', width:'12', height:'12', fill:'surfie-green'}})
+//-       .info-list
+//-         each item in list2
+//-           .info-list__item
+//-             .info-list__left
+//-               p.font-semibold.text-silver-chalice #{item.left}
+//-             .info-list__right
+//-               p(class=`font-semibold ${item.accent ? 'text-surfie-green' : ''}`) #{item.right}
