--- a/app/sass/base/grid/display.sass
+++ b/app/sass/base/grid/display.sass
@@ -4,6 +4,8 @@
   display: block
 .d-flex
   display: flex
+.d-inline-flex
+  display: inline-flex
 
 // Responsive margins
 @each $bp, $name in $breakpoints
@@ -12,5 +14,5 @@
       display: none
     .d-#{$name}-block
       display: block
-    .d-#{$name}-flex
-      display: flex
+    .d-#{$name}-inline-flex
+      display: inline-flex
