--- a/app/sass/components/table.sass
+++ b/app/sass/components/table.sass
@@ -8,10 +8,14 @@
     white-space: nowrap
     padding: 10px 15px
     vertical-align: middle
+    width: 1%
     &:first-child
-      padding-left: 40px
+      padding-left: offset(1)
       +media-max($bp-sm)
         padding-left: 15px
-  td *
-    +media-max($bp-sm)
-      font-size: rem(12px) !important
+    &:last-child
+      padding-right: offset(1)
+      +media-max($bp-sm)
+        padding-right: 15px
+  th
+    padding-top: 0
