--- a/app/pug/pages/settings-page/services.pug
+++ b/app/pug/pages/settings-page/services.pug
@@ -92,6 +92,7 @@ include /partials/button
             p 9.21 EUR
           td
           td
-.row
-  .col-12.offset-0.offset-xxl-1
-    p.font-semibold Have you learn to do new services?<br/> <a href="#" class="text-boston-blue">Contact<a/> the project manager to update your pricing & services list.
+.catalog__content-wrap
+  .row
+    .col-12.offset-0.offset-xxl-1
+      p.font-semibold Have you learn to do new services?<br/> <a href="#" class="text-boston-blue">Contact<a/> the project manager to update your pricing & services list.
