--- a/app/sass/components/catalog.sass
+++ b/app/sass/components/catalog.sass
@@ -25,7 +25,7 @@
     background-color: $c-white
     box-shadow: $s-primary
     border-radius: 0 $r-primary $r-primary $r-primary
-    &-item
+    &-wrap
       +media-max($bp-xxl)
         padding: 0 30px
       +media-max($bp-sm)
