--- a/app/sass/components/info-list.sass
+++ b/app/sass/components/info-list.sass
@@ -14,5 +14,6 @@
     white-space: nowrap
   &__right
     display: table-cell
+    width: 100%
     vertical-align: top
     word-break: break-word
