--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -76,3 +76,4 @@
 @import ./components/edit-avatar-modal
 @import ./components/edit-avatar-tool
 @import ./components/edit-avatar
+@import ./components/editable-text
