--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -77,3 +77,4 @@
 @import ./components/edit-avatar-tool
 @import ./components/edit-avatar
 @import ./components/editable-text
+@import ./components/alert
